--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -146,6 +146,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Geometry\CodedMesh.cpp" />
+    <ClCompile Include="Geometry\ShapeVertices.cpp" />
     <ClCompile Include="Input\Input.cpp" />
     <ClCompile Include="Math\Matrices.cpp" />
     <ClCompile Include="Shaders\Functions\loadShader.cpp" />
@@ -153,8 +155,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Geometry\ShapeVertices.h" />
     <ClInclude Include="Input\Input.h" />
     <ClInclude Include="Math\Matrices.h" />
+    <ClInclude Include="Geometry\CodedMesh.h" />
     <ClInclude Include="Renderer\Renderer.h" />
     <ClInclude Include="Shaders\Functions\loadShader.h" />
   </ItemGroup>
