--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -71,17 +71,23 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <LibraryPath>C:\Program Files %28x86%29\Microsoft Visual Studio\2019\Community\VC\Lib;$(LibraryPath)</LibraryPath>
-    <IncludePath>C:\Program Files %28x86%29\Microsoft Visual Studio\2019\Community\VC\Include\GL;C:\Program Files %28x86%29\Microsoft Visual Studio\2019\Community\VC\Include\GLFW;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLEW\lib;C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLFW\lib;C:\Program Files %28x86%29\Microsoft Visual Studio\2019\Community\VC\Lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\sarah\Documents\GitHub\OpenGL\OpenGL\glm;C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLFW\include;C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLEW\include;C:\Program Files %28x86%29\Microsoft Visual Studio\2019\Community\VC\Include\GL;C:\Program Files %28x86%29\Microsoft Visual Studio\2019\Community\VC\Include\GLFW;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>C:\Users\sarah\Documents\GitHub\OpenGL\OpenGL\glm;C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLFW\include;C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLEW\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+    <LibraryPath>C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLEW\lib;C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLFW\lib;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>C:\Users\sarah\Documents\GitHub\OpenGL\OpenGL\glm;C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLFW\include;C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLEW\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+    <LibraryPath>C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLEW\lib;C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLFW\lib;$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>C:\Users\sarah\Documents\GitHub\OpenGL\OpenGL\glm;C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLFW\include;C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLEW\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+    <LibraryPath>C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLEW\lib;C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLFW\lib;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -89,12 +95,12 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>GLEW_STATIC;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)OpenGL/glm;$(SolutionDir)Dependencies\GLFW\include;$(SolutionDir)Dependencies\GLEW\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\sarah\Documents\GitHub\OpenGL\OpenGL\glm;C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLEW\include;C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLFW\include;$(SolutionDir)OpenGL/glm;$(SolutionDir)Dependencies\GLFW\include;$(SolutionDir)Dependencies\GLEW\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glew32s.lib;glfw3.lib;opengl32.lib;User32.lib;Gdi32.lib;Shell32.lib</AdditionalDependencies>
+      <AdditionalDependencies>glew32s.lib;glfw3.lib;opengl32.lib;User32.lib;Gdi32.lib;Shell32.lib;glew32s.lib;glfw3.lib;opengl32.lib;User32.lib;Gdi32.lib;Shell32.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(SolutionDir)Dependencies\GLFW\lib;$(SolutionDir)Dependencies\GLEW\lib\Release\Win32</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -104,10 +110,12 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\Users\sarah\Documents\GitHub\OpenGL\OpenGL\glm;C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLEW\include;C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLFW\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>glew32s.lib;glfw3.lib;opengl32.lib;User32.lib;Gdi32.lib;Shell32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -118,7 +126,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>GLEW_STATIC;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)OpenGL/glm;$(SolutionDir)Dependencies\GLFW\include;$(SolutionDir)Dependencies\GLEW\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\sarah\Documents\GitHub\OpenGL\OpenGL\glm;C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLEW\include;C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLFW\include;$(SolutionDir)OpenGL/glm;$(SolutionDir)Dependencies\GLFW\include;$(SolutionDir)Dependencies\GLEW\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -126,7 +134,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)Dependencies\GLFW\lib;$(SolutionDir)Dependencies\GLEW\lib\Release\Win32</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glew32s.lib;glfw3.lib;opengl32.lib;User32.lib;Gdi32.lib;Shell32.lib</AdditionalDependencies>
+      <AdditionalDependencies>glew32s.lib;glfw3.lib;opengl32.lib;User32.lib;Gdi32.lib;Shell32.lib;glew32s.lib;glfw3.lib;opengl32.lib;User32.lib;Gdi32.lib;Shell32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -137,12 +145,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\Users\sarah\Documents\GitHub\OpenGL\OpenGL\glm;C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLEW\include;C:\Users\sarah\Documents\GitHub\OpenGL\Dependencies\GLFW\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>glew32s.lib;glfw3.lib;opengl32.lib;User32.lib;Gdi32.lib;Shell32.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -163,6 +173,7 @@
     <ClInclude Include="Sorts\MergeSort.h" />
     <ClInclude Include="Sorts\Quicksort.h" />
     <ClInclude Include="Sorts\Randomizer.h" />
+    <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
