--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -175,6 +175,10 @@
     <ClInclude Include="Sorts\Randomizer.h" />
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Shaders\Fragment\SimpleFragmentShaderTwo.frag" />
+    <None Include="Shaders\Vertex\CameraShaderTwo.vert" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
