--- a/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL.vcxproj.filters
@@ -66,4 +66,8 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Shaders\Vertex\CameraShaderTwo.vert" />
+    <None Include="Shaders\Fragment\SimpleFragmentShaderTwo.frag" />
+  </ItemGroup>
 </Project>
